kubernetes/manifests/recipes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recipes
  labels:
    name: recipes
