kubernetes/manifests/recipes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  namespace: recipes
  labels:
    app: recipes
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: recipes
  template:
    metadata:
      labels:
        app: recipes
    spec:
      securityContext:
        fsGroup: 0
        runAsGroup: 0
        runAsNonRoot: false
        runAsUser: 0
      containers:
        - name: recipes-container
          image: vabene1111/recipes:2.3.5
          ports:
            - containerPort: 80
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 20
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 20
            successThreshold: 1
          volumeMounts:
            - name: recipes-media-pvc
              mountPath: /opt/recipes/mediafiles
            - name: static-files
              mountPath: /opt/recipes/staticfiles
      imagePullSecrets:
        - name: dockerhub-token
      volumes:
        - name: recipes-media-pvc
          persistentVolumeClaim:
            claimName: recipes-media-pvc
        - name: static-files
          emptyDir:
            sizeLimit: 500Mi
