kubernetes/manifests/recipes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: recipes
  labels:
    app: recipes
spec:
  selector:
    app: recipes
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
