kubernetes/manifests/recipes/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: recipes-network-policy
  namespace: recipes
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "80"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "pgsql.nullservers.com"
      toPorts:
        - ports:
            - port: "5432"
    - toFQDNs:
        - matchName: smtp.resend.com
        - matchName: raw.githubusercontent.com
        - matchName: auth.nullservers.com
